--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,5 +7,5 @@ main:
   #   url: /tags/
   # - title: "About"
   #   url: /about/
-  - title: Awesome NW
-    url: /awesome-nw/
+  - title: links
+    url: /links/
